fix unwanted vertical scrollbars

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,6 +1,5 @@
 html {
     height: 100%;
-    overflow-y: scroll;
 }
 
 body { font-family: Verdana, sans-serif; font-size: 12px; color:#333; margin: 0; padding: 0; min-width: 900px; }
@@ -739,6 +738,7 @@ div.project-title {
     border: 0px;
     width: 100%;
     height: 100%;
+    vertical-align: bottom;
 }
 
 .sampleThumbnail {
